--- a/style.css
+++ b/style.css
@@ -223,6 +223,10 @@ nav .fa {
   margin-top: 20px;
   border-top: 10px;
 }
+.row1 h3{
+  margin-top: 20px;
+  border-top: 10px;
+}
 
 .prg{
   padding-top: 50px;
@@ -243,6 +247,11 @@ nav .fa {
   .row {
     flex-direction: column;
   }
+  .row1 h3{
+    margin-top: 20px;
+    border-top: 10px;
+  }
+  
 }
 
 /* ------------------------------------------------services--------------------------------------------------- */
