--- a/style.css
+++ b/style.css
@@ -248,8 +248,8 @@ nav .fa {
     flex-direction: column;
   }
   .row1 h3{
-    margin-top: 20px;
-    border-top: 10px;
+    margin-top: auto;
+    border-top: auto;
   }
   
 }
