--- a/style.css
+++ b/style.css
@@ -243,6 +243,10 @@ nav .fa {
   .row {
     flex-direction: column;
   }
+  .row1 h3{
+    margin-top: 50px;
+    border-top: 10px;
+  }
 }
 
 /* ------------------------------------------------services--------------------------------------------------- */
